--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -38,8 +38,8 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  padding: 0;
+  box-sizing: border-box;
   min-width: 320px;
   min-height: 100vh;
   background-color: var(--color-bg);
